[tool.poetry]
name = "poetry add pandas==2-0-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry add pandas==2"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
pandas = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
